# poverse

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
poverse/: __init__.py  cli.py  exceptions.py
tests/: test_cli.py  test_poverse.py
