[tool.poetry]
name = "poverse"
version = "0.1.0"
description = "Get the installed version of dependency within poetry.lock file"
authors = ["Joel Clemence"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.0"
mypy = "^0.812"
bandit = "^1.7.0"

[tool.poetry.scripts]
poverse = "poverse.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
